02.feb (og) 
	Exportly.cpp: If \voiceOne etc. is used in pianostaff,
	articulation signs are either placed on only above or only below
	staff, and not in any reasonable connection with the notehead. So
	\voiceOne etc. is no longer used in pianostaff.
1.feb (lv)
      - export MusicXML <print new-system> also in converter mode
31.jan (ws)
      - add systemFlag property to text style dialog and text property dialog
      - on default set systemFlag for repeat text style and system text style
      (lv)
      - fix MusicXML import/export of several clefs
      (db)
      - splash screen for beta
      - update handbooks
      - latest TS translation files
30.jan (ws)
      - simplify selection model; remove system selection (dotted line selection)
      - new shortcut: Ctrl+Delete removes selected measure timewise
28,jan (db)
      - export slash flats as quarter notes
      - better BPM for each tempo text (traditional metronome numbers and
        correct speeds)
      - logical order for "Never" in preferences update tab
24.jan (ws)
      - do not call lupdate anymore when starting a complete build from the
        top level Makefile
22.jan (la)
      - add ability to choose MIDI input interface
19.jan (ws)
      - fix crashes with note pitches of 127
17.jan (ws)
      - Extend the note properties dialog to make note head group and type
        selectable
      - Implement line break for horizontal frame. This allows frames at the
        end of a system
      (la)
      - add "No update available" dialog on manual update check
16.jan (ws)
      - new function: flip tuplet bracket direction
      (la)
      - add frequency preference for automatic update check
12.jan (db)
      - turn off "screen-shot" preference by default
      - add major and minor key signature names to transpose dialog
11.jan (lv)
      - fix import of MusicXML bracket line-end
10.jan (ws)
      - fixes for "insert measure" operations