@@ -32,7 +32,7 @@
 ;General
 
   ;Name and file
-  Name "@CPACK_PACKAGE_INSTALL_DIRECTORY@"
+  Name "@CPACK_PACKAGE_INSTALL_DIRECTORY@ @CPACK_PACKAGE_VERSION_MAJOR@.@CPACK_PACKAGE_VERSION_MINOR@.@CPACK_PACKAGE_VERSION_PATCH@"
   OutFile "@CPACK_TOPLEVEL_DIRECTORY@/@CPACK_OUTPUT_FILE_NAME@"
 
   ;Set compression
