@@ -1,3 +1,6 @@
+04 feb (la)
+      - Change app name in windows installer
+      - Change default install path for windows installer
 02.feb (og) 
 	Exportly.cpp: If \voiceOne etc. is used in pianostaff,
 	articulation signs are either placed on only above or only below
